# clu-development-tools

./: .gitignore  MANIFEST.in  README.md  cluster.yml  main.py  pyproject.toml
.github/workflows/: release.yml
files/: ansible.cfg  main.yml
files/.bin/: ans-run  gen-root-ca  ssh-copy-ids
old/: requirements.txt
old/files/.bin/: ans-requirements
src/: cli.py  cludt.py
src/k8s/: main.py
src/k8s/files/.bin/: ans-ping
src/k8s/templates/: Vagrantfile.j2  ssh-copy-ids.j2
templates/: Vagrantfile.j2  gen-root-ca.j2  hosts.txt.j2  inventory.yml.j2  ssh-copy-ids.j2
