[build-system]
requires = ["setuptools", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "cludt"
version = "0.0.2"
dependencies = [
    "requires",
    "Jinja2 == 3.1.2",
    "pathlib ==1.0.1",
    "click>=8.0",
    'importlib-metadata; python_version<"3.14"',
]

[project.scripts]
cludt = "cludt:cludt"

[tool.setuptools.package-data]
"data" = ["*.j2", "*.yml"]
